--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "transfer-app-to-terarara-bank",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://a-terarara.github.io/transfer-app-to-terarara-bank",
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
@@ -13,6 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
